updating /name to create or update via POST - skip PUT, we had dups in DB
